fixed hats hover; fixed spacing issues; adjusted some media q

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  cursor: url("assets/stick2.png") 10 3, auto;
+  cursor: url("assets/stick2.png") 2 0, auto;
 }
 
 body {
@@ -123,7 +123,7 @@ img {
 .about {
   background-color: var(--light-color);
   margin-top: -70px;
-  padding-top: 40px;
+  padding: 40px 0;
 }
 
 .about .element {
@@ -141,11 +141,14 @@ img {
 
 .about h2 {
   font-size: 44px;
+  margin-top: 0;
 }
 
 .about p {
-  font-size: 20px;
+  font-size: 18px;
   text-align: start;
+  margin: 0;
+  line-height: 28px;
 }
 
 .about-list {
@@ -166,7 +169,7 @@ img {
 }
 
 .about-icons-text h3 {
-  margin: 40px 5px;
+  margin: 25px 5px;
   letter-spacing: 2px;
 }
 
@@ -185,6 +188,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding: 40px 0;
 }
 
 .team .flex {
@@ -194,13 +198,13 @@ img {
 .team .grid {
   align-items: flex-end;
   justify-content: center;
-  min-height: 725px;
+  min-height: 560px;
 }
 
 .team h2 {
   font-size: 45px;
   letter-spacing: 3px;
-  margin-top: 40px;
+  text-align: center;
 }
 
 .team p {
@@ -228,7 +232,11 @@ img {
   z-index: 1;
 }
 
-.team .hat:hover {
+.team .hat-item {
+  max-height: 350px;
+}
+
+.team .hat-item:hover .hat {
   top: -210px;
 }
 
@@ -247,7 +255,7 @@ img {
 /* contact */
 .contact {
   background-color: var(--dark-color);
-  margin-top: -50px;
+  padding-top: 40px;
 }
 
 .contact .flex {
@@ -257,7 +265,6 @@ img {
 .contact h1 {
   font-size: 40px;
   letter-spacing: 5px;
-  margin-top: 50px;
 }
 
 .contact h2 {
@@ -320,18 +327,18 @@ footer .flex {
 }
 
 .footer a {
-  font-size: 20px;
-  letter-spacing: 5px;
   font-weight: bold;
 }
 
 .footer a:hover {
   color: var(--dark-color);
+  cursor: pointer;
 }
 
 .footer h1 {
   font-size: 40px;
   transition: 1s;
+  margin: 0;
 }
 
 .footer h1:hover {
@@ -347,16 +354,15 @@ footer .flex {
 }
 
 .footer i:hover {
-  transform: translateY(-5px);
+  cursor: pointer;
 }
 
-.footer .designer {
-  margin-left: 15px;
-  margin: 2px;
+.designer.flex {
+  justify-content: space-evenly;
 }
 
-.footer nav {
-  text-align: center;
+.designer h4 {
+  width: min-content;
 }
 
 /* media q */
@@ -406,7 +412,7 @@ footer .flex {
 
   .under-text {
     letter-spacing: 1px;
-    left: -35px;
+    left: -25px;
   }
 }
 
@@ -438,7 +444,7 @@ footer .flex {
     text-align: center;
   }
 
-  .footer p {
-    margin: 10px 15px;
+  .footer .social a {
+    margin: 0 2px;
   }
 }
